test/modules/standard/FileSystem/filerator/bradc/testemptyglob.good
testemptyglob.chpl:15: error: halt reached - glob() iterator zipped with something too big
